--- a/doc/01. description.md
+++ b/doc/01. description.md
@@ -4,15 +4,13 @@
 
 ##### [Order now](https://puqcloud.com/index.php?rp=/store/wisecp-module-mikrotik-wireguard-vpn) | [Download](https://download.puqcloud.com/WISECP/Product/PUQ_WISECP-Mikrotik-WireGuard-VPN/) | [FAQ](https://faq.puqcloud.com/)
 
-#### The Mikrotik WireGuard VPN module provides the ability to sell the Virtual Private Network service to customers.
+### The Mikrotik WireGuard VPN module provides the ability to sell the Virtual Private Network service to customers.
 
-#####  
-
-##### Supports protocols:
+### Supports protocols:
 
 - WireGuard
 
-##### Module Functions:
+### Module Functions:
 
 - Auto create and deploy VPN account/accounts
 - Suspend/Unsuspend/Delete/Change Package
@@ -22,7 +20,7 @@
 - Link to instructions for setting up the service in the client area.
 - Mechanism for working with servers and server groups
 
-##### Available options in the admin panel:
+### Available options in the admin panel:
 
 - Create users
 - Suspend users
@@ -32,7 +30,7 @@
 - VPN connection status
 - Text and QR code configuration types
 
-##### Available options in the client panel:
+### Available options in the client panel:
 
 - Links in the form of buttons to the instruction and VPN clients
 - General information about the service
@@ -41,12 +39,10 @@
 - VPN connection status
 - Text and QR code configuration types
 
-##### Screenshot of the client area
+### Screenshot of the client area
 
 [![image-1700907162847.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700907162847.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700907162847.png)
 
-##### Screenshot of the Admin area
+### Screenshot of the Admin area
 
 [![image-1700907172233.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700907172233.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700907172233.png)
-
-<div id="bkmrk--0"><div></div></div>
