--- a/doc/05. Admin Area/01. order-detail.md
+++ b/doc/05. Admin Area/01. order-detail.md
@@ -4,7 +4,7 @@
 
 ##### [Order now](https://puqcloud.com/index.php?rp=/store/wisecp-module-mikrotik-wireguard-vpn) | [Download](https://download.puqcloud.com/WISECP/Product/PUQ_WISECP-Mikrotik-WireGuard-VPN/) | [FAQ](https://faq.puqcloud.com/)
 
-##### Navigate to the service you want to manage, then go to the '**Core**' tab.
+### Navigate to the service you want to manage, then go to the '**Core**' tab.
 
 [![image-1700915177712.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700915177712.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700915177712.png)
 
@@ -18,8 +18,6 @@ Also, below are fields with the client's personal data.
   
 You can also individually override package options for the client by checking the '**Overwrite package settings**' box.
 
-<p class="callout success">After modifying the configuration options, check the '**Send changes to server**' box to save the data to the [**MikroTik** ](https://mikrotik.com/)server.</p>
+>After modifying the configuration options, check the '**Send changes to server**' box to save the data to the [**MikroTik** ](https://mikrotik.com/)server.
 
 [![image-1700915370093.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700915370093.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700915370093.png)
-
-<div id="bkmrk--1"><div></div></div><div id="bkmrk--2"><div></div></div>
