--- a/doc/06. Client Area/01. product-home-screen.md
+++ b/doc/06. Client Area/01. product-home-screen.md
@@ -4,7 +4,7 @@
 
 ##### [Order now](https://puqcloud.com/index.php?rp=/store/wisecp-module-mikrotik-wireguard-vpn) | [Download](https://download.puqcloud.com/WISECP/Product/PUQ_WISECP-Mikrotik-WireGuard-VPN/) | [FAQ](https://faq.puqcloud.com/)
 
-##### Available options in the client panel:
+### Available options in the client panel:
 
 - Links in the form of buttons to the instruction and VPN clients
 - General information about the service
@@ -12,6 +12,6 @@
 - QR code for WireGuard configuration
 - VPN connection status
 
-##### Screenshot of the client area
+### Screenshot of the client area
 
 [![image-1700915073683.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700915073683.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700915073683.png)
