--- a/doc/04. WireGuard Clients configuring/02. mikrotik-wireguard-client-configuration.md
+++ b/doc/04. WireGuard Clients configuring/02. mikrotik-wireguard-client-configuration.md
@@ -4,7 +4,7 @@
 
 ##### [Order now](https://puqcloud.com/index.php?rp=/store/wisecp-module-mikrotik-wireguard-vpn) | [Download](https://download.puqcloud.com/WISECP/Product/PUQ_WISECP-Mikrotik-WireGuard-VPN/) | [FAQ](https://faq.puqcloud.com/)
 
-##### Make sure you have an up to date **routerOS** system.
+### Make sure you have an up to date **routerOS** system.
 
 Version must be at least: 7.6
 
@@ -15,11 +15,11 @@ Columns: NAME, VERSION
 0 routeros  7.6    
 ```
 
-##### Open a single-use shipment on the **WireGuard** section for the client's configuration request
+### Open a single-use shipment on the **WireGuard** section for the client's configuration request
 
 [![image-1671100595697.png](https://doc.puq.info/uploads/images/gallery/2022-12/scaled-1680-/image-1671100595697.png)](https://doc.puq.info/uploads/images/gallery/2022-12/image-1671100595697.png)
 
-##### Login to **Mikrotik** via Winbox
+### Login to **Mikrotik** via Winbox
 
 Click on the menu item **WireGuard** In the window that opens, in the **WireGuard** tab, click the plus to add a new **WireGuard** interface
 
@@ -52,7 +52,7 @@ Click **OK** to create a peer
 
 [![image-1671101662963.png](https://doc.puq.info/uploads/images/gallery/2022-12/scaled-1680-/image-1671101662963.png)](https://doc.puq.info/uploads/images/gallery/2022-12/image-1671101662963.png)
 
-##### In order to have communication with the server, you need to set the address on the **WireGuard** interface
+### In order to have communication with the server, you need to set the address on the **WireGuard** interface
 
 Go to the menu item **IP-&gt;Addresses** In the window that opens, click the plus to assign an IP address to the WireGuard interface
 
@@ -66,4 +66,4 @@ Press the OK button to confirm
 
 [![image-1671102046038.png](https://doc.puq.info/uploads/images/gallery/2022-12/scaled-1680-/image-1671102046038.png)](https://doc.puq.info/uploads/images/gallery/2022-12/image-1671102046038.png)
 
-<p class="callout info">You also need to configure the traffic routes you need at your discretion.</p>
+>You also need to configure the traffic routes you need at your discretion.
