First release in development

--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -2,4 +2,6 @@
 
 ### Mikrotik WireGuard VPN module **[WISECP](https://puqcloud.com/link.php?id=78)** 
 
-##### [Order now](https://puqcloud.com/index.php?rp=/store/wisecp-module-mikrotik-wireguard-vpn) | [Download](https://download.puqcloud.com/WISECP/Product/PUQ_WISECP-Mikrotik-WireGuard-VPN/) | [FAQ](https://faq.puqcloud.com/)
+##### [Order now](https://puqcloud.com/index.php?rp=/store/wisecp-module-mikrotik-wireguard-vpn) | [Download](https://download.puqcloud.com/WISECP/Product/PUQ_WISECP-Mikrotik-WireGuard-VPN/) | [FAQ](https://faq.puqcloud.com/)\
+
+### First release in development
