--- a/doc/01. description.md
+++ b/doc/01. description.md
@@ -41,7 +41,7 @@
 
 ### Screenshot of the client area
 
-[![image-1700907162847.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700907162847.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700907162847.png)
+![image](https://github.com/PUQ-sp-z-o-o/WISECP-Module-Mikrotik-WireGuard-VPN/assets/81689153/5e0cb3e3-5b51-476d-af85-2a2486c2960c)
 
 ### Screenshot of the Admin area
 
