--- a/doc/06. Client Area/01. product-home-screen.md
+++ b/doc/06. Client Area/01. product-home-screen.md
@@ -14,4 +14,4 @@
 
 ### Screenshot of the client area
 
-[![image-1700915073683.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700915073683.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700915073683.png)
+![image](https://github.com/PUQ-sp-z-o-o/WISECP-Module-Mikrotik-WireGuard-VPN/assets/81689153/a9e3edbb-694c-449a-82fb-ef39d4d5fe98)
