--- a/doc/01. description.md
+++ b/doc/01. description.md
@@ -28,6 +28,7 @@
 - Delete users
 - Change Package
 - VPN connection status
+- VPN interface reboot function (to reset a frozen connection)
 - Text and QR code configuration types
 
 ### Available options in the client panel:
@@ -38,6 +39,7 @@
 - QR code for WireGuard configuration
 - VPN connection status
 - Text and QR code configuration types
+- VPN interface reboot function (to reset a frozen connection)
 
 ### Screenshot of the client area
 
