--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -4,6 +4,13 @@
 
 ##### [Order now](https://puqcloud.com/index.php?rp=/store/wisecp-module-mikrotik-wireguard-vpn) | [Download](https://download.puqcloud.com/WISECP/Product/PUQ_WISECP-Mikrotik-WireGuard-VPN/) | [FAQ](https://faq.puqcloud.com/)
 
+### v1.2 Released 17-06-2024
+1. Added VPN interface reboot function (to reset a frozen connection)
+2. Improved adaptation to the mobile version of the client area
+3. Some changes in translations
+
+- - - - -
+
 ### v1.1 Released 15-02-2024
 
  - Fixed a bug with some cases where it was not possible to delete the server
