--- a/doc/06. Client Area/01. product-home-screen.md
+++ b/doc/06. Client Area/01. product-home-screen.md
@@ -11,6 +11,7 @@
 - Option to download WireGuard configuration as a file
 - QR code for WireGuard configuration
 - VPN connection status
+- VPN interface reboot function (to reset a frozen connection)
 
 ### Screenshot of the client area
 
