--- a/doc/05. Admin Area/01. order-detail.md
+++ b/doc/05. Admin Area/01. order-detail.md
@@ -6,7 +6,7 @@
 
 ### Navigate to the service you want to manage, then go to the '**Core**' tab.
 
-[![image-1700915177712.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700915177712.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700915177712.png)
+![image](https://github.com/PUQ-sp-z-o-o/WISECP-Module-Mikrotik-WireGuard-VPN/assets/81689153/874c93b6-7542-40a5-8d3b-91cf57040ca8)
 
 In the opened tab, you have a view of the online status of the service. The available online information includes:
 
@@ -20,4 +20,4 @@ You can also individually override package options for the client by checking th
 
 >After modifying the configuration options, check the '**Send changes to server**' box to save the data to the [**MikroTik** ](https://mikrotik.com/)server.
 
-[![image-1700915370093.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700915370093.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700915370093.png)
+![image](https://github.com/PUQ-sp-z-o-o/WISECP-Module-Mikrotik-WireGuard-VPN/assets/81689153/fb7d1d38-8e29-4d7c-9712-9b78e7c3fc00)
