--- a/doc/03. Installation and configuration guide/05. service-product-configuration.md
+++ b/doc/03. Installation and configuration guide/05. service-product-configuration.md
@@ -39,7 +39,7 @@ On the opened page, enter all the necessary details for your new service and nav
   
 Select the '**PUQ Mikrotik WireGuard VPN**' module from the drop-down list of modules.
 
-[![image-1700914172218.png](https://doc.puq.info/uploads/images/gallery/2023-11/scaled-1680-/image-1700914172218.png)](https://doc.puq.info/uploads/images/gallery/2023-11/image-1700914172218.png)
+![image](https://github.com/user-attachments/assets/89f1a6c5-ee41-4604-b5f6-45eab2b2cf49)
 
 ### 4. Fill in the configuration options according to your preferences.
 
@@ -54,6 +54,8 @@ Select the '**PUQ Mikrotik WireGuard VPN**' module from the drop-down list of mo
 - **Bandwidth Download** and **Bandwidth Upload** represent the connection speed that will be restricted by these parameters, in megabits per second, respectively.
 - **Comment Prefix** will be added at the comment in **[MikroTik](https://mikrotik.com/)**
 - **Persistent Keepalive** and **AllowedIPs:** parameters of configuration WireGuard clients
+- **Tabs in Config** - Configuration file format with tabs or not
+- **MTU in Config** - Display MTU in config file
 - **Link to Instruction** Provide the link to the instruction for the service, and it will be displayed in the client area as a separate button
 - **Link to VPN Clients** Provide the link to the page for downloading VPN clients for the service, and it will be displayed in the client area as a separate button
 - **Automatic Setup** Please activate for automatic installation of the order. Otherwise, administrator approval is required.
