--- a/doc/02. changelog.md
+++ b/doc/02. changelog.md
@@ -4,7 +4,15 @@
 
 ##### [Order now](https://puqcloud.com/index.php?rp=/store/wisecp-module-mikrotik-wireguard-vpn) | [Download](https://download.puqcloud.com/WISECP/Product/PUQ_WISECP-Mikrotik-WireGuard-VPN/) | [FAQ](https://faq.puqcloud.com/)
 
+### v1.3 Released 26-03-2025
+
+1. Added the ability to display MTU in the configuration file
+2. Added the ability to delete tabs in the configuration file
+
+- - - - -
+
 ### v1.2 Released 17-06-2024
+
 1. Added VPN interface reboot function (to reset a frozen connection)
 2. Improved adaptation to the mobile version of the client area
 3. Some changes in translations
